--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -7,7 +7,9 @@ on:
 jobs:
 
   credo:
-    runs-on: ubuntu-latest
+    # Match Ubuntu release to Erlang release as per
+    # https://github.com/erlef/setup-beam#compatibility-between-operating-system-and-erlangotp
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: Set up Elixir
@@ -27,7 +29,8 @@ jobs:
       run: mix credo
 
   format:
-    runs-on: ubuntu-latest
+    # Likewise
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: Set up Elixir
